kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodePort
  labels:
    app: my-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    #nodePort: 30000
  selector:
    app: my-app
